Fix scrollbar

--- a/Blog-de-Frictine/src/App.module.css
+++ b/Blog-de-Frictine/src/App.module.css
@@ -4,5 +4,5 @@
   background-image: url(./assets/backgroundBlog.png);
   background-size: cover;
   background-repeat: none;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
